--- a/src/Sitecore.Support.215088/Sitecore.Support.215088.csproj
+++ b/src/Sitecore.Support.215088/Sitecore.Support.215088.csproj
@@ -75,6 +75,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="Views\FormBuilder\FieldTemplates\MultipleLineText.cshtml" />
+    <Content Include="Views\FormBuilder\FieldTemplates\Password.cshtml" />
+    <Content Include="Views\FormBuilder\FieldTemplates\PasswordConfirmation.cshtml" />
+    <Content Include="Views\FormBuilder\FieldTemplates\SingleLineText.cshtml" />
     <None Include="web.config" />
   </ItemGroup>
   <PropertyGroup>
